# strife

./: .gitignore  Cargo.toml  README.md
src/: gui.rs  main.rs  settings.rs
src/api/: cdn_client.rs  mod.rs  rest_client.rs
src/api/gateway/: data.rs  mod.rs  payloads.rs
src/data/: mod.rs  settings.rs  state.rs  user.rs
src/gui/: icons.rs  message.rs  mod.rs  theme.rs
src/gui/components/: guildbar.rs  images.rs  mod.rs  sidebar.rs  user_avatar.rs
src/gui/components/text_chat/: message.rs  mod.rs
src/gui/theme/: data.rs  mod.rs
src/gui/views/: mod.rs
src/gui/views/direct_messages/: mod.rs
src/gui/views/private_channels/: mod.rs
src/gui/views/settings/: accounts_tab.rs  appearance_tab.rs  mod.rs
