[package]
name = "strife"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dirs = "4.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
iced = { version = "0.5", features = ["tokio", "image", "svg"] }
iced_graphics = "0.4"
iced_lazy = "0.2"
iced_native = "0.6"
keyring = "1.2"
once_cell = "1.16"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.22", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "fs"]}
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"
