[package]
name = "strife"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dirs = "4.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
iced = { git = "https://github.com/iced-rs/iced", rev = "7ceb8b8", features = ["tokio", "image", "svg"] }
iced_graphics = { git = "https://github.com/iced-rs/iced", rev = "7ceb8b8" }
iced_lazy = { git = "https://github.com/iced-rs/iced", rev = "7ceb8b8" }
iced_native = { git = "https://github.com/iced-rs/iced", rev = "7ceb8b8" }
keyring = "1.2"
once_cell = "1.16"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.22", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "fs"]}
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.3"
