[package]
name = "strife"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dirs = "4.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
iced = { git = "https://github.com/iced-rs/iced", rev = "2dea5fe", features = ["tokio", "image", "svg"] }
iced_graphics = { git = "https://github.com/iced-rs/iced", rev = "2dea5fe" }
iced_lazy = { git = "https://github.com/iced-rs/iced", rev = "2dea5fe" }
iced_native = { git = "https://github.com/iced-rs/iced", rev = "2dea5fe" }
keyring = "1.2"
once_cell = "1.16"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "fs"]}
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "time"] }
url = "2.3"
